<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DeveloperActivity"
    android:layout_margin="10dp"

    >
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/developerImage"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/devimg"
            android:layout_centerHorizontal="true"
            android:layout_weight="0.5"/>
        <TextView
            android:id="@+id/devTitle"
            android:layout_marginTop="@dimen/text_margin"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/developerImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/DevTitle"
            android:textSize="@dimen/title_size"
            android:fontFamily="@string/bold"
            android:textColor="@color/textColor"/>
        <TextView
            android:id="@+id/devName"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/devTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/DevName"
            android:textSize="@dimen/text_size"
            android:fontFamily="@string/bold"
            android:textColor="@color/textColor"
            android:layout_marginBottom="@dimen/text_margin"/>
        <View
            android:id="@+id/line1"
            android:layout_below="@id/devName"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginVertical="4dp"
            android:background="@color/grey"/>
        <TextView
            android:layout_marginTop="@dimen/text_margin"
            android:layout_below="@id/line1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/welcomeNotes"
            android:text="@string/WelcomeNotes"
            android:textSize="@dimen/title_size"
            android:fontFamily="@string/bold"
            />
        <TextView

            android:layout_below="@id/welcomeNotes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/hodName"
            android:text="@string/HodName"
            android:textSize="16sp"
            android:fontFamily="@string/regular"
            />
        <TextView

            android:layout_below="@id/hodName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/facName"
            android:text="@string/FacName"
            android:textSize="16sp"
            android:fontFamily="@string/regular"
            android:layout_marginBottom="@dimen/text_margin"/>
        <View
            android:id="@+id/line2"
            android:layout_below="@id/facName"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginVertical="4dp"
            android:background="@color/grey"/>
        <TextView
            android:id="@+id/contactTitle"
            android:layout_marginTop="@dimen/text_margin"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/line2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ContactTitle"
            android:textSize="@dimen/title_size"
            android:fontFamily="@string/bold"
            android:textColor="@color/textColor"/>
        <LinearLayout
            android:layout_marginTop="@dimen/text_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/contactTitle"
            android:orientation="horizontal"
            android:layout_centerHorizontal="true">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_marginEnd="5dp"
                android:id="@+id/gmailIcon"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/gmail"
                android:layout_weight="0.5"/>
            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:id="@+id/instaIcon"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/instagram"
                android:layout_weight="0.5"/>
            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:id="@+id/callIcon"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/call"
                android:layout_weight="0.5"/>
            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_marginStart="5dp"
                android:id="@+id/msgIcon"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/msg"
                android:layout_weight="0.5"/>
        </LinearLayout>
    </RelativeLayout>



</RelativeLayout>