<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.about.aboutFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView

            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:scaleType="fitXY"
            android:id="@+id/college_Image"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="HOD's Message..."
            android:layout_marginTop="@dimen/text_margin"
            android:layout_marginHorizontal="@dimen/text_margin"
            android:justificationMode="inter_word"
            android:textSize="@dimen/title_size"
            android:textColor="@color/textColor"
            android:fontFamily="@string/bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_hodMsg"
            android:layout_marginTop="@dimen/text_margin"
            android:layout_marginHorizontal="@dimen/text_margin"
            android:justificationMode="inter_word"
            android:textSize="@dimen/text_size"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/textColor"
            android:fontFamily="@string/light"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/text_margin"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_label"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/text_margin"
                android:text="Green Environment"
                android:textSize="@dimen/text_size"
                android:textColor="@color/textColor"
                android:fontFamily="@string/light"/>
        </LinearLayout>
        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Branch"
            android:layout_marginTop="36dp"
            android:textSize="@dimen/title_size"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/textColor"
            android:fontFamily="@string/bold"/>

        <androidx.viewpager.widget.ViewPager

            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="@dimen/text_margin"
            android:foregroundGravity="center"
            android:clipToPadding="false"
            android:overScrollMode="never"
            android:id="@+id/viewPager"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/text_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Contact Details"
                android:layout_marginTop="36dp"
                android:textSize="@dimen/title_size"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/textColor"
                android:fontFamily="@string/bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/collegeName"
                android:layout_marginTop="@dimen/text_margin"
                android:layout_marginHorizontal="@dimen/text_margin"

                android:textSize="@dimen/text_size"

                android:textColor="@color/textColor"
                android:fontFamily="@string/light"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginHorizontal="@dimen/text_margin"
                android:layout_marginTop="@dimen/text_margin"

                android:fontFamily="@string/light"
                android:text="@string/address"
                android:textColor="@color/textColor"
                android:textSize="@dimen/text_size" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginHorizontal="@dimen/text_margin"
                android:layout_marginTop="@dimen/text_margin"

                android:fontFamily="@string/light"
                android:text="Office Phone no: (Mob. 7607809620, 9415881273)"
                android:textColor="@color/textColor"
                android:textSize="@dimen/text_size" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginHorizontal="@dimen/text_margin"
                android:layout_marginTop="@dimen/text_margin"
                android:fontFamily="@string/light"
                android:text="Email: knipssenggsln@gmail.com"
                android:textColor="@color/textColor"
                android:textSize="@dimen/text_size" />

            <ImageView
                android:id="@+id/map"
                android:layout_width="wrap_content"
                android:layout_height="230dp"
                android:src="@drawable/map"/>


        </LinearLayout>


    </LinearLayout>

</androidx.core.widget.NestedScrollView>