<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".ui.home.homeFragment">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="MissingClass">

    <com.smarteist.autoimageslider.SliderLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:id="@+id/slider"/>
        
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Computer Science Engineering"
         android:layout_marginTop="36dp"
         android:textSize="@dimen/title_size"
         android:layout_gravity="center_horizontal"
         android:textColor="@color/textColor"
         android:fontFamily="@string/bold"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/about_college"
         android:layout_marginTop="@dimen/text_margin"
         android:layout_marginHorizontal="@dimen/text_margin"
         android:justificationMode="inter_word"
         android:textSize="@dimen/text_size"
         android:layout_gravity="center_horizontal"
         android:textColor="@color/textColor"
         android:fontFamily="@string/light"/>

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginTop="36dp"
           android:background="@color/darkColor">
           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:layout_margin="36dp"
               android:orientation="vertical">

               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="Departments"
                   android:layout_marginTop="@dimen/text_margin"
                   android:textSize="@dimen/title_size"
                   android:layout_gravity="center_horizontal"
                   android:textColor="#fff"
                   android:fontFamily="@string/bold"/>
               <com.google.android.material.card.MaterialCardView
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_marginTop="16dp">
                  <LinearLayout
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:background="#fff"
                      android:orientation="vertical">

                      <TextView
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="Computer Science"
                          android:layout_marginTop="@dimen/text_margin"
                          android:layout_marginHorizontal="@dimen/text_margin"
                          android:textSize="@dimen/text_size"
                          android:layout_gravity="center_horizontal"
                          android:textColor="@color/textColorC"
                          android:layout_margin="8dp"
                          android:fontFamily="@string/light"/>
                      
                      <View
                          android:layout_width="match_parent"
                          android:layout_height="1dp"
                          android:background="@color/grey"/>
                      <TextView
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="Civil Engineering "
                          android:layout_marginTop="@dimen/text_margin"
                          android:layout_marginHorizontal="@dimen/text_margin"
                          android:textSize="@dimen/text_size"
                          android:layout_gravity="center_horizontal"
                          android:textColor="@color/textColorC"
                          android:layout_margin="8dp"
                          android:fontFamily="@string/light"/>

                      <View
                          android:layout_width="match_parent"
                          android:layout_height="1dp"
                          android:background="@color/grey"/>
                      <TextView
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="Mechanical Engineering"
                          android:layout_marginTop="@dimen/text_margin"
                          android:layout_marginHorizontal="@dimen/text_margin"
                          android:textSize="@dimen/text_size"
                          android:layout_gravity="center_horizontal"
                          android:textColor="@color/textColorC"
                          android:layout_margin="8dp"
                          android:fontFamily="@string/light"/>

                  </LinearLayout>
               </com.google.android.material.card.MaterialCardView>
           </LinearLayout>
       </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/text_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Contact Details"
                android:layout_marginTop="36dp"
                android:textSize="@dimen/title_size"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/textColor"
                android:fontFamily="@string/bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/collegeName"
                android:layout_marginTop="@dimen/text_margin"
                android:layout_marginHorizontal="@dimen/text_margin"

                android:textSize="@dimen/text_size"

                android:textColor="@color/textColor"
                android:fontFamily="@string/light"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginHorizontal="@dimen/text_margin"
                android:layout_marginTop="@dimen/text_margin"

                android:fontFamily="@string/light"
                android:text="@string/address"
                android:textColor="@color/textColor"
                android:textSize="@dimen/text_size" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginHorizontal="@dimen/text_margin"
                android:layout_marginTop="@dimen/text_margin"

                android:fontFamily="@string/light"
                android:text="Office Phone no: (Mob. 7607809620, 9415881273)"
                android:textColor="@color/textColor"
                android:textSize="@dimen/text_size" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginHorizontal="@dimen/text_margin"
                android:layout_marginTop="@dimen/text_margin"
                android:fontFamily="@string/light"
                android:text="Email: knipssenggsln@gmail.com"
                android:textColor="@color/textColor"
                android:textSize="@dimen/text_size" />
            
            <ImageView
                android:id="@+id/map"
                android:layout_width="wrap_content"
                android:layout_height="230dp"
                android:src="@drawable/map"/>


        </LinearLayout>



    </LinearLayout>
</ScrollView>

    

</FrameLayout>